fix(ci): keep partition tests compatible with Java 11